; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_menf21bmc_wdt.c_menf21bmc_wdt_stop.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_menf21bmc_wdt.c_menf21bmc_wdt_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.watchdog_device = type { i32 }
%struct.menf21bmc_wdt = type { i32 }

@BMC_CMD_WD_OFF = common dso_local global i32 0, align 4
@BMC_WD_OFF_VAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.watchdog_device*)* @menf21bmc_wdt_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @menf21bmc_wdt_stop(%struct.watchdog_device* %0) #0 {
  %2 = alloca %struct.watchdog_device*, align 8
  %3 = alloca %struct.menf21bmc_wdt*, align 8
  store %struct.watchdog_device* %0, %struct.watchdog_device** %2, align 8
  %4 = load %struct.watchdog_device*, %struct.watchdog_device** %2, align 8
  %5 = call %struct.menf21bmc_wdt* @watchdog_get_drvdata(%struct.watchdog_device* %4)
  store %struct.menf21bmc_wdt* %5, %struct.menf21bmc_wdt** %3, align 8
  %6 = load %struct.menf21bmc_wdt*, %struct.menf21bmc_wdt** %3, align 8
  %7 = getelementptr inbounds %struct.menf21bmc_wdt, %struct.menf21bmc_wdt* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @BMC_CMD_WD_OFF, align 4
  %10 = load i32, i32* @BMC_WD_OFF_VAL, align 4
  %11 = call i32 @i2c_smbus_write_byte_data(i32 %8, i32 %9, i32 %10)
  ret i32 %11
}

declare dso_local %struct.menf21bmc_wdt* @watchdog_get_drvdata(%struct.watchdog_device*) #1

declare dso_local i32 @i2c_smbus_write_byte_data(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
